--- a/skin/css/style.css
+++ b/skin/css/style.css
@@ -119,7 +119,7 @@
     background: url("../img/service-bg.png") no-repeat;
 }
 .times-bg{
-    background: url("../img/times-bg.jpg") no-repeat;
+    background: url("../img/times-bg.png") no-repeat;
 }
 .about-bg{
     background: url("../img/about-bg.png") no-repeat;
